--- a/src/sass/04-utilities/misc.sass
+++ b/src/sass/04-utilities/misc.sass
@@ -1,9 +1,3 @@
-%container-base
-  width: 100%
-  margin: 0 auto
-  padding-left: calc(max(5vw, env(safe-area-inset-left)))
-  padding-right: calc(max(5vw, env(safe-area-inset-right)))
-
 .container
   @extend %container-base
   @include media-breakpoint-up("sm")
